--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 <body>
     <nav>
-        <div class="container">
-            <ul>
-                <li>雙週更｜書評</li>
-                <li>22號加菜日｜主題</li>
-                <li>七號廚師上新菜｜圖書館新書</li>
-            </ul>
+        <!-- <div class="container"> -->
+        <ul>
+            <li>雙週更｜書評</li>
+            <li>22號加菜日｜主題</li>
+            <li>七號廚師上新菜｜圖書館新書</li>
+        </ul>
             
-        </div>
+        <!-- </div> -->
     </nav>
     
     <header id="header_all" style="background-color: #f8e7d3;">
